# dualsystem-agentic

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: agentloop_async_monitor_fsm.md
examples/: config.dual_franka.mock.yaml  config.dual_franka.yaml  config.local.yaml  config.mock.yaml  config.x2robot.yaml  mcp_server_example.py  mcp_servers.example.json  run_online_robot.py  visualize_run_video.py
mcp_server/: __init__.py
mcp_server/dual_franka_mcp_server/: README.md  __init__.py  dual_franka_bridge.py  mock_dual_franka_bridge.py  server.py
mcp_server/mock_mcp_server/: README.md  server.py
mcp_server/x2robot_mcp_server/: README.md  mock_x2robot_bridge.py  server.py  x2robot_bridge_server.py
src/dualsystem_agentic/: __init__.py  app.py  cli.py  config.py  interaction.py  run_logger.py  runtime.py
src/dualsystem_agentic/core/: __init__.py  loop.py  parser.py  prompts.py  tool_names.py  types.py
src/dualsystem_agentic/executor/: __init__.py  base.py  http_executor.py
src/dualsystem_agentic/io/: __init__.py  dataloader.py  image.py
src/dualsystem_agentic/mcp/: __init__.py  base.py  connection.py  fake.py  manager.py  registry.py
src/dualsystem_agentic/vlm/: __init__.py  base.py  local_qwen.py  openai_compatible.py  scripted.py  visual_scene_prepass.py
tests/: test_app.py  test_cli.py  test_config.py  test_dual_franka.py  test_loop.py  test_parser.py  test_prompts.py  test_run_logger.py  test_runtime.py
